@@ -21,6 +21,8 @@ requires "Log::Any" => "0";
 requires "Moo" => "0";
 requires "Scalar::Util" => "0";
 requires "Test::Builder" => "0";
+requires "Text::Diff" => "0";
+requires "Text::Diff::Table" => "0";
 requires "Text::ParseWords" => "0";
 requires "Time::Duration::Parse" => "0";
 requires "Try::Tiny" => "0";
