@@ -4,6 +4,6 @@ use warnings;
 use Test::Code::TidyAll;
 use Test::More;
 
-tidyall_ok();
+tidyall_ok( verbose => 1 );
 
 done_testing();
